# mapbg

./: CMakeLists.txt
include/: sw_to_hw_map.h  sw_to_hw_map_yaml.h
src/: mapper.c  sw_to_hw_map.c  sw_to_hw_map_loader.c  sw_to_hw_map_writer.c
